--- a/Quantum-Computation/1-Intro.tex
+++ b/Quantum-Computation/1-Intro.tex
@@ -301,16 +301,51 @@ The rest of QM just flows from here, up to our imagination.
             1 & 0 \\ 0 &-1 
         \end{pmatrix} \,.
     \end{gather*}
-    Then
+    Then, a qubit looks like
     \begin{equation*}
-        \ket{\Psi} = a \ket{0} + b \ket{1} \,.
+        \ket{\varphi} = \alpha \ket{0} + \beta \ket{1} \,.
     \end{equation*}
+
+    As a convention, we would like to normalize the coefficients $\alpha$ and $\beta$
+    so that $|| \ket{\varphi} ||^2 = 1$.
      
-    Measure $\sigma_3$:
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Qubits}
+    Measure the effect of $\sigma_3$. Recall Axiom 3. 
+
+    Two different eigenstates:
     \begin{equation*}
-        \mathbb{P}(\ket{0}) = |a|^2 \qquad
-        \mathbb{P}(\ket{1}) = |b|^2 \,.
+        \ket{0} \,, \quad \ket{1} \,.
     \end{equation*}
+
+    \begin{equation*}
+        \sigma_3 = 1 \begin{pmatrix}
+            1 & 0 \\  0 & 0
+        \end{pmatrix} -1  \begin{pmatrix}
+            0 & 0 \\  0 & 1
+        \end{pmatrix} = E_1 - E_2 \,.
+    \end{equation*}
+
+    Probability for each eigenstate is the square of the projection:
+    \begin{equation*}
+        \mathbb{P}(1) = || E_1 \ket{\varphi}||^2 = |\alpha|^2 \qquad
+        \mathbb{P}(-1) = || E_2 \ket{\varphi}||^2 = |\beta|^2 \,.
+    \end{equation*}
+
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Bloch sphere representation of Qubits}
+    \begin{theorem}
+        \begin{equation*}
+            \ket{\varphi} = \cos \left( \frac{\theta}{2} \right) + e^{i\phi} \sin \left( \frac{\theta}{2}  \right) \ket{1} \,.
+        \end{equation*}
+    \end{theorem}
+
 
 \end{frame}
 
