--- a/Quantum-Computation/1-Intro.tex
+++ b/Quantum-Computation/1-Intro.tex
@@ -14,7 +14,7 @@
 \newcommand{\SV}[2][]{\sidenote[colback=green!10]{\textbf{SV\xspace #1:} #2}}
 
 %% Title 
-\title{ Quantum Computation \\ Introduction }
+\title{ Quantum Computation \\ Meeting 1: Introduction }
 \author{Truong-Son Van}
 %\affil[1]{Institute}
 \institute{Fulbright University Vietnam Reading Group}
@@ -342,8 +342,17 @@ The rest of QM just flows from here, up to our imagination.
     \frametitle{Bloch sphere representation of Qubits}
     \begin{theorem}
         \begin{equation*}
-            \ket{\varphi} = \cos \left( \frac{\theta}{2} \right) + e^{i\phi} \sin \left( \frac{\theta}{2}  \right) \ket{1} \,.
+            \ket{\varphi} = \cos \left( \frac{\theta}{2} \right)\ket{0} + e^{i\phi} \sin \left( \frac{\theta}{2}  \right) \ket{1} \,.
         \end{equation*}
+    \end{theorem}
+
+    \begin{theorem}
+        The expectation values of the Pauli operators are
+        \begin{gather*}
+            \langle \sigma_1 \rangle = \sin \theta \cos \phi \,,  \\
+            \langle \sigma_2 \rangle = \sin \theta \sin \phi \,, \\
+            \langle \sigma_3 \rangle = \cos \theta \,.
+        \end{gather*}
     \end{theorem}
 
 
