update typos and gitignore

--- a/Quantum-Computation/1-Intro.tex
+++ b/Quantum-Computation/1-Intro.tex
@@ -89,7 +89,7 @@
     \end{definition}
     \begin{example}
         \begin{enumerate}
-            \item $\mathbb{C}^n$ wiht the usual inner product
+            \item $\mathbb{C}^n$ with the usual inner product
             \item $L^2(\mathbb{R};\mathbb{C})$ where
                 \begin{equation*}
                     \langle f, g \rangle = \int \overline{f} g 
@@ -143,7 +143,7 @@ Let $\sim$ be an equivalence relation on $\mathcal{H}$ defined by
     x\sim y \iff x = \alpha y\,, \alpha \in \mathbb{C}\,.
 \end{equation*}
 
-In QM, a ray, donoted by $\ket{\varphi}$, is an element in the equivalence class $\mathcal{H}/\sim$.
+In QM, a ray, denoted by $\ket{\varphi}$, is an element in the equivalence class $\mathcal{H}/\sim$.
 
     When we write $\ket{\varphi}$, we typically think of representation $\varphi$ of this equivalence class.
 \end{frame}
@@ -212,7 +212,7 @@ In QM, a ray, donoted by $\ket{\varphi}$, is an element in the equivalence class
     A measurement is a process in which information about the state of a physical system
     is acquired by an observer. 
     In QM, the measurement of an observable $A$ prepares an eigenstate of $A$, 
-    and the observer learns the value of the corresponding eigenvalue. 
+    and the observer learns the value of the corresponding eigenvalue 
 
     As QM is inherently probabilistic, the probabilities for the outcomes are determined by ``Born" rule:
     \begin{equation*}
@@ -239,7 +239,7 @@ In QM, a ray, donoted by $\ket{\varphi}$, is an element in the equivalence class
 \end{axiom}
 
 \begin{axiom}[Composite systems]
-    The Hilber space of composite system $AB$ is the tensor product of $A$ and $B$:
+    The Hilbert space of composite system $AB$ is the tensor product of $A$ and $B$:
     \begin{equation*}
         \mathcal{H}_{AB} = \mathcal{H}_A \otimes \mathcal{H}_B
     \end{equation*}
@@ -289,7 +289,7 @@ The rest of QM just flows from here, up to our imagination.
             0 \\1 
         \end{pmatrix}\,.
     \end{equation*}
-    All the possible \emph{unitary} transformations are the the Pauli operators:
+    All the possible \emph{unitary} transformations are the Pauli operators:
     \begin{gather*}
         I \,, \quad \sigma_1 = \begin{pmatrix}
             0 & 1 \\ 1 & 0
